# svSolver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  svSolver_ExternalTissueSupport_README.txt
.github/workflows/: Build.yml  cmake.yml
BuildWithMake/: Makefile  README-build-linux.txt  README-build-macosx.txt  README-build-windows.txt  get-vtk-binaries.sh  include.mk  quick-build-centos8-all-mpi.sh  quick-build-linux.sh  quick-build-macosx.sh  quick-build-ubuntu18-all-mpi.sh  quick-build-windows.sh
BuildWithMake/MakeHelpers/2019.06/: compiler.gcc.x64_linux.mk  compiler.gfortran.x64_macosx.mk  compiler.ifort.x64_cygwin.mk  compiler.vs19.16.x64_cygwin.mk  vtk.gl1.x64_cygwin.mk  vtk.gl1.x64_linux.mk  vtk.gl1.x64_macosx.mk  vtk.gl2.x64_cygwin.mk  vtk.gl2.x64_linux.mk
BuildWithMake/Release/: Makefile
BuildWithMake/Release/windows_msi_helpers/: makewxs-meshsim-and-parasolid.tcl  makewxs-svsolver.tcl
BuildWithMake/SampleOverrides/centos_6/: global_overrides.mk
BuildWithMake/SampleOverrides/ubuntu_14/: global_overrides.mk
BuildWithMake/SampleOverrides/windows/: global_overrides.mk
Code/: CMakeLists.txt
Code/CMake/: FindMPI.cmake  SimVascularDependentOptions.cmake  SimVascularExternals.cmake  SimVascularHomeSetup.cmake  SimVascularInstallLibs.cmake  SimVascularInstallSetup.cmake  SimVascularInternals.cmake  SimVascularMacros.cmake  SimVascularOptions.cmake  SimVascularSystemCheck.cmake  SimVascularThirdParty.cmake  SimVascularVersion.cmake  VTKSVConfig.cmake
Code/FlowSolvers/: CMakeLists.txt
Code/FlowSolvers/Include/: CMakeLists.txt  SimVascular.h
Code/FlowSolvers/ThreeDSolver/: CMakeLists.txt
Code/FlowSolvers/ThreeDSolver/SolverIO/: CMakeLists.txt  cvSolverIO.cxx
Code/FlowSolvers/ThreeDSolver/dummyMPI/: CMakeLists.txt
Code/FlowSolvers/ThreeDSolver/svLS/: CMakeLists.txt
Code/FlowSolvers/ThreeDSolver/svPost/: CMakeLists.txt  Makefile  post_solver.cxx
Code/FlowSolvers/ThreeDSolver/svPre/: CMakeLists.txt  Laplace_Solve.cxx  Makefile  cmd.cxx  cmd.h  helpers.cxx  presolver-vtk-cmds.cxx  stannspcg.f  supre-cmds.cxx  supre.cxx
Code/FlowSolvers/ThreeDSolver/svSolver/: CMakeLists.txt  Input.h  Makefile  addelmpvsqforsvls-closedloop-coronary.f  common_c.h  coronary_subroutines.f  elmgmr-closedloop-varwall.f  genbkb-varwall.f  global.h  input.config  input_fform.cxx  itrdrv-closedloop-varwall-coronary.f  main.cxx  partition.cxx  proces-varwall.f  readnblk-varwall.f  solver_subroutines.f  use_vtk.cxx  varwall_subroutines.f
Code/FlowSolvers/ThreeDSolver/svSolver/common_blocks/: inpdat.h  nomodule.h
Code/Scripts/: CMakeLists.txt  SimVascularScriptMacros.cmake
Code/Scripts/executable/developer/: svsolver-nompi-linux.in
Distribution/: CMakeLists.txt
travis/: build.sh  travis_build.sh  travis_cmake_config.sh  travis_cmake_config_linux_download_externals.sh
